--- a/main.html
+++ b/main.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quotr</title>
+    <link rel="stylesheet" href="style.css">
+    <script href="buttons.js" async></script>
+    <script href="data.js" async></script>
+</head>
+<body>
+    <h1>Quotr</h1>
+    <div id="quote-container"></div>
+    <button id="btn">New Quote</button>
+</body>
+</html>
